User log in through Facebook works

--- a/Pitch/Pitch/Info.plist
+++ b/Pitch/Pitch/Info.plist
@@ -2,12 +2,17 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>2401394480184040</string>
+		<string>Pitch</string>
+	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb[APP_ID]</string>
+				<string>fb2401394480184040</string>
 			</array>
 		</dict>
 	</array>
