--- a/Pitch/GoogleService-Info.plist
+++ b/Pitch/GoogleService-Info.plist
@@ -13,21 +13,21 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.PitchFBU.Pitch</string>
+	<string>com.PitchFBU.Pitch6701</string>
 	<key>PROJECT_ID</key>
 	<string>pitch-a94fb</string>
 	<key>STORAGE_BUCKET</key>
 	<string>pitch-a94fb.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1049916562755:ios:055b34dcd23ebb27</string>
 	<key>DATABASE_URL</key>
